# CouncilForge

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
config/: personas.yaml  settings.yaml
docs/: phase1_spec.md  phase2_spec.md  phase3_spec.md  phase4_spec.md  phase5_spec.md  phase_6_spec.md  relationship_engine_analysis.md
src/agents/: base.py  llm_agent.py
src/config/: loader.py  settings.py
src/core/: models.py
src/llm/: client.py
src/simulation/: controller.py
src/social/: decision_engine.py  emotion_engine.py  interaction_triggers.py  interpersonal_goals.py  message_parser.py  prompt_builder.py  relationship_engine.py
src/utils/: logging.py
src/world/: engine.py
tests/integration/: test_simulation_flow.py
tests/unit/: test_agent_logic.py  test_config.py  test_models.py  test_world.py
tests/unit/agents/: test_agent_logic.py
tests/unit/config/: test_config.py
tests/unit/core/: test_models.py
tests/unit/social/: test_decision_engine.py  test_emotion_engine.py  test_interaction_triggers.py  test_interpersonal_goals.py  test_message_parser.py  test_relationship_engine.py
tests/unit/world/: test_cost_modifiers.py  test_world.py
